--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="WA Status Saver - Version : 1.0"
+                android:text="WA Status Saver"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textAlignment="center" />
